<resources>

    <!-- App Name and Entry Screen Buttons Names-->
    <string name="app_LoGoname">EasyTA</string>
    <string name="app_name">Autogenic Training</string>
    <string name="Entry_Start">Start</string>
    <string name="Entry_Practice">Practice</string>
    <string name="Entry_Info">Informations</string>
    <string name="Entry_Opt">Options</string>

    <!-- Options Menu values-->
    <string name="Opt_MenuName">Options Menu</string>
    <string name="Opt_Notification">Notifications</string>
    <string name="Opt_Language">Language</string>
    <string name="Opt_Language_EN">English</string>
    <string name="Opt_Language_IT">Italian</string>
    <string name="Opt_Reset">Reset Application</string>
    <string name="Opt_Dialog_Title">Reset Progress</string>
    <string name="Opt_Dialog_Text">Are you sure you want to reset your progress?</string>

    <!-- Information Text -->
    <string-array name="Info_Headline">
        <item>What\'s the Autogenic Training and why you should use EasyTA?</item>
        <item>What are the benefits of the TA?</item>
        <item>What happens during the TA?</item>
    </string-array>
    <string-array name="Info_Text">
        <item> The Autogenic Training (AT) is a relaxation technique created by Schultz in the early 900\'s. This technique allows you to reduce stress and to make a more efficient use of your own mental and physical resources through a state of deep relaxation. EasyTA is addressed to all those who are going to start the AT and are followed by a professional trainer. The app\'s purpose is to help you overcome the first phase of training, which is fundamental to obtain long and short term results! </item>
        <item>The AT acts on the nervous system, improving the state of well-being and general health. In particular, it helps modulate emotional reactions and stress, it favours concentration and relax, and it improves recovery. It also helps to relieve the symptoms caused by gastrointestinal, dermatological, cardiological and sexual disorders, mild depressive states, anxiety, insomnia and other conditions which have psychosomatic origins. </item>
        <item> With the AT you enter in a specific psychic dimension, characterized by the alpha rhythm. This cerebral rhythm is associated to relaxation and pre-sleep conditions, it allows the mind to be more receptive, ready to learn and creative. In this condition the level of the serotonin (also known as the hormone of happiness)increases, helping to improve the mood. </item>
    </string-array>

    <!-- Parameters to Add_exercise_Fragment -->
    <string name="relax">Relax Level</string>
    <string name="phy_sens">Physical Sensations</string>
    <string name="remark">Remarks</string>
    <string name="Add_Morning">Morning</string>
    <string name="Add_Anoon">Day</string>
    <string name="Add_Night">Night</string>
    <string name="Add_Optional">Optional</string>
    <string name="Add_SaveBt">Save</string>

    <!-- Parameters to Week Status Fragment -->
    <!-- Weekdays in English-->
    <string-array name="Week_Weekdays">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="Week_Dialog_Title">Delete entry</string>
    <string name="Week_Dialog_Text">Are you sure you want to delete the entry?</string>

    <!-- Week Specific Text -->
    <string-array name="Week_Text">
        <item>I am completely calm</item>
        <item>My body is heavy</item>
        <item>My body is warm</item>
        <item>My heartbeat is calm and relaxed</item>
        <item>My breathing is calm and regular</item>
        <item>My solar plexus is warm</item>
        <item>My forehead is pleasantly cool</item>
    </string-array>

    <!-- First Time Section-->
    <!-- Name Date Values-->
    <string name="Name_Date_text">Before we get started we need a few extra information in order to set up the application for you!</string>
    <string name="Name_Date_date">When will/did you start?</string>
    <string name="Name_Date_name">What\'s your name?</string>
    <string name="Name_Name">Name</string>

    <!-- Quiz Values -->
    <string name="Quiz_Number">Question %1$d:</string>
    <string name="Quiz_Init_Text">Hi %1$s, just one more thing!\nIn order to help us evaluate your progress at the end of the seven weeks of training, we would like you to complete a small test!</string>
    <string name="Quiz_Init_Bt">Start Test</string>
    <string name="Quiz_Final_Text">Thank you for completing the test. Now you are ready to start you training!\n\n Regularly complete your exercises and you will see the results in no time!</string>
    <string name="Quiz_Final_Bt">Start Training</string>
    <string name="Quiz_Next_Bt">Next</string>
    <string name="Quiz_Cont">Continue</string>

    <string-array name="Quiz_Questions">
        <item>I feel tense</item>
        <item>I feel happy</item>
        <item>I feel tired and with little energy</item>
        <item>I easily fall asleep</item>
        <item>I feel aches in different parts of my body</item>
        <item>I am able to enjoy the little everyday joys</item>
        <item>I am easily irritable</item>
        <item>I feel relaxed</item>
        <item>I have trouble managing my emotions</item>
        <item>I feel well-disposed towards others</item>
    </string-array>
    <string-array name="Quiz_Answers">
        <item>Never</item>
        <item>Rarely</item>
        <item>Sometimes</item>
        <item>Often</item>
        <item>Almost always</item>
    </string-array>

    <!-- Start Screen Values-->
    <string name="Start_Welcome">Welcome back %1$s!</string>
    <string name="Start_ButtonStatus">Exercises</string>
    <string name="Start_ButtonProgress">Week Overview</string>
    <string name="Start_ButtonStatistics">Exercise Overview</string>
    <string name="Start_ButtonFinal">Conclude Training!</string>
    <string name="Start_Results">Personal changes</string>


    <!-- Progress Activity-->
    <string name="Progress_Week">Week %1$d</string>
    <string-array name="Progress_WeekTheme">
        <item>calm</item>
        <item>heavyness</item>
        <item>warmth</item>
        <item>heart</item>
        <item>breath</item>
        <item>plexus</item>
        <item>forehead</item>
    </string-array>


    <!-- Statistics Activity -->
    <string name="Statistics_Frequency"> Frequency</string>
    <string name="Statistics_Relax"> Relax</string>
    <string name="Statistics_Period"> Period</string>
    <string name="Statistics_Physical"> Physical Sensations</string>
    <string name="Statistics_Remarks"> Remarks</string>
    <string name="Statistics_Selector">Select Statistic</string>

    <string name="Statistics_Max">Maximum Relax level</string>
    <string name="Statistics_Relax_Avg">Relax Average</string>
    <string name="Statistics_Week_Freq">Exercises per week</string>



    <string-array name="Statistics_TimeValues">
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="Statistics_WeekToggle">
        <item>W1</item>
        <item>W2</item>
        <item>W3</item>
        <item>W4</item>
        <item>W5</item>
        <item>W6</item>
        <item>W7</item>
    </string-array>
    <string-array name="Stat_Weekdays">
        <item>Su.</item>
        <item>Mo.</item>
        <item>Tu.</item>
        <item>We.</item>
        <item>Th.</item>
        <item>Fr.</item>
        <item>Sa.</item>
    </string-array>

    <!-- Final results Strings-->
    <string-array name="Results_Progress">
        <item>much less</item>
        <item>less</item>
        <item>slightly less</item>
        <item>equally</item>
        <item>slightly more</item>
        <item>more</item>
        <item>much more</item>
    </string-array>
    <string-array name="Results_Comment">
        <item>You feel %1$s tense</item>
        <item>You feel %1$s happy</item>
        <item>You feel %1$s tired and with less energy</item>
        <item>You fall asleep %1$s easily</item>
        <item>You feel %1$s achy in different parts of your body</item>
        <item>You are %1$s capable of enjoing the little everyday joys</item>
        <item>You are %1$s irritable</item>
        <item>You feel %1$s relaxed</item>
        <item>You have %1$s trouble managing your emotions</item>
        <item>You feel %1$s well-disposed towards others</item>
    </string-array>
    <string name="Results_Intro">What has changed after two months of training?</string>
    <string name="title_activity_results_">Results_Activity</string>
    <string name="action_settings">Settings</string>


    <!-- Notification Server Strings-->
    <string name="Service_Text">%1$s, time for your %2$s exercise!</string>
    <string name="Service_Title">Exercise reminder!</string>


    <!-- Intent Parameters -->
    <string name="Intent_Day">intent_day</string>
    <string name="Intent_Month">intent_month</string>
    <string name="Intent_Year">intent_year</string>
    <string name="Intent_WeekDay">intent_weekday</string>
    <string name="Intent_ElapsedDays">intent_elapseddays</string>
    <string name="Intent_WeekNumber">intent_weeknumber</string>
    <string name="Intent_Notification_0">Morning_Intent</string>
    <string name="Intent_Notification_1">Afternoon_Intent</string>
    <string name="Intent_Notification_2">Night_Intent</string>

    <!-- Shared Preferences for State of App-->
    <string name="Pref_FileName">LallaAppPreferences</string>
    <string name="Pref_first_time_starting">first_time</string>
    <string name="Pref_name">username</string>
    <string name="Pref_date">FirstDayDate</string>
    <string name="Pref_day">FirstDay_Day</string>
    <string name="Pref_month">FirstDay_Month</string>
    <string name="Pref_year">FirstDay_Year</string>
    <string name="Pref_dayofweek">FirstDay_DayOfWeek</string>
    <string name="Pref_Notification_0">Morning_Notification</string>
    <string name="Pref_Notification_1">Afternoon_Notification</string>
    <string name="Pref_Notification_2">Night_Notification</string>
    <string name="Pref_FirstTimeWeekDisplay">first_time_week</string>
    <string name="Pref_FinishedProgram">finished_program</string>


</resources>

