<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_opt_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ricardomartins.lallaapp.MainScreens.OptScreen">

    <TextView
        android:text="@string/Opt_MenuName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Opt_Text"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/Opt_Notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Opt_NotificationText"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:layout_below="@id/Opt_Text"
        android:layout_marginTop="25dp" />

    <Button
        android:text="@string/Opt_Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Opt_Reset_Button"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/Opt_English"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:text="@string/Add_Morning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Opt_NotificationText"
        android:id="@+id/Opt_CheckMorning"
        android:textSize="24sp"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:text="@string/Add_Anoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Opt_CheckMorning"
        android:id="@+id/Opt_CheckAnoon"
        android:textSize="24sp"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:text="@string/Add_Night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Opt_CheckAnoon"
        android:id="@+id/Opt_CheckNight"
        android:textSize="24sp"
        android:onClick="onCheckboxClicked" />

    <TextView
        android:text="@string/Opt_Language"
        android:id="@+id/Opt_Language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/Opt_CheckNight"
        android:layout_marginTop="25dp" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icon"
        android:layout_above="@+id/Opt_Credits"
        android:layout_below="@id/Opt_Reset_Button"
        android:id="@+id/imageView"
        android:layout_marginTop="50dp" />

    <TextView
        android:text="Created by PsychApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:id="@+id/Opt_Credits" />

    <Button
        android:text="@string/Opt_Language_EN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Opt_English"
        android:layout_below="@+id/Opt_Language"
        android:layout_centerHorizontal="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_marginRight="50dp" />

    <Button
        android:text="@string/Opt_Language_IT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Opt_Italian"
        android:layout_below="@+id/Opt_Language"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_toRightOf="@id/Opt_English" />
</RelativeLayout>
