<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_entry_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.ricardomartins.lallaapp.MainScreens.EntryScreen"
    android:weightSum="1"
    android:background="@color/default_screen_bg">


    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/Tname"
        android:textSize="@dimen/BigTitle_Size"
        android:textColor="@color/Toggle_on"
        android:textAlignment="center"
        android:layout_weight="0.6"
        android:gravity="center_vertical"
        android:textStyle="normal|bold"
        android:lines="2" />

    <Button
        android:text="@string/Entry_Practice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Bstart"
        android:layout_marginTop="@dimen/Entry_Button_TopPadding"
        android:textSize="@dimen/Entry_Button_Text"
        android:textStyle="normal|bold"
        android:background="@color/Toggle_off"
        android:layout_marginBottom="@dimen/Entry_Button_SidePadding"
        android:layout_marginLeft="@dimen/Entry_Button_SidePadding"
        android:layout_marginRight="@dimen/Entry_Button_SidePadding" />

    <Button
        android:text="@string/Entry_Info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Binfo"
        android:textSize="@dimen/Entry_Button_Text"
        android:textStyle="normal|bold"
        android:background="@color/Toggle_off"
        android:layout_margin="@dimen/Entry_Button_SidePadding" />

    <Button
        android:text="@string/Entry_Opt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Bopt"
        android:textSize="@dimen/Entry_Button_Text"
        android:textStyle="normal|bold"
        android:background="@color/Toggle_off"
        android:layout_margin="@dimen/Entry_Button_SidePadding" />
</LinearLayout>
