<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:ignore="MissingPrefix"
    tools:context="pt.psychapp.ricardomartins.lallaapp.MainScreens.StartScreen">


    <Button
        fontPath="fonts/LobsterTwo-Bold.otf"
        android:text="@string/Start_ButtonStatus"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Start_WeekStatus"
        android:layout_above="@+id/Start_Progress"
        android:layout_alignLeft="@+id/Start_Progress"
        android:layout_alignRight="@+id/Start_Progress"
        android:layout_alignParentTop="false"
        android:background="@color/Toggle_off"
        android:textSize="@dimen/Entry_Button_Text"
        android:textStyle="normal|bold" />

    <TextView
        fontPath="fonts/LobsterTwo-Bold.otf"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:id="@+id/Start_WelcomeText"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold"
        android:layout_marginTop="60dp"
        android:textSize="@dimen/General_Text_Size"
        android:text="Welcome Back, Laura!"
        tools:ignore="HardcodedText" />

    <Button
        fontPath="fonts/LobsterTwo-Bold.otf"
        android:textAllCaps="false"
        android:text="@string/Start_ButtonProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/Start_Progress"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:background="@color/Toggle_off"
        android:textSize="@dimen/Entry_Button_Text"
        android:textStyle="normal|bold"
        android:layout_alignLeft="@+id/Start_Statistics"
        android:layout_alignRight="@+id/Start_Statistics" />

    <Button
        fontPath="fonts/LobsterTwo-Bold.otf"
        android:textAllCaps="false"
        android:text="@string/Start_ButtonStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Start_Statistics"
        android:layout_below="@+id/Start_Progress"
        android:background="@color/Toggle_off"
        android:textSize="@dimen/Entry_Button_Text"
        android:textStyle="normal|bold"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignRight="@+id/Start_Final"
        android:layout_alignLeft="@+id/Start_Final" />

    <Button
        fontPath="fonts/LobsterTwo-Bold.otf"
        android:textAllCaps="false"
        android:text="@string/Start_ButtonFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Start_Final"
        android:layout_below="@+id/Start_Statistics"
        android:background="@color/Toggle_off"
        android:textSize="@dimen/Entry_Button_Text"
        android:textStyle="normal|bold"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:paddingLeft="@dimen/Entry_Button_SidePadding"
        android:paddingRight="@dimen/Entry_Button_SidePadding" />


</RelativeLayout>
