<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first__time_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:focusableInTouchMode="true"
    tools:context="com.example.ricardomartins.lallaapp.Quizz.First_Time_Activity">


    <TextView
        android:id="@+id/name_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name_Date_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="26sp"
        android:textAllCaps="false"
        android:layout_weight="0.3"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name_Date_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:paddingTop="5dp"
            android:layout_weight="0.2"
            android:clickable="false"
            android:textSize="26sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="65dp"
            android:paddingLeft="65dp"
            android:layout_weight="0.8">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:background="@drawable/rectangle_inactive"
                android:textSize="30sp"
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/ND_nameinput_"
                android:maxLength="20"
                android:hint="@string/Name_Name"
                android:singleLine="true" />


        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name_Date_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:paddingTop="5dp"
            android:layout_weight="0.2"
            android:clickable="false"
            android:textSize="26sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="65dp"
            android:paddingLeft="65dp"
            android:layout_weight="0.8">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Date"
                android:ems="10"
                android:background="@drawable/rectangle_inactive"
                android:textSize="30sp"
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_gravity="center_horizontal"
                android:inputType="date"
                android:id="@+id/ND_dateinput" />


        </FrameLayout>
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <Button
            android:text="Continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ND_button"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0.1"
            android:background="@color/Toggle_on"
            android:textColor="@color/Toggle_off" />
    </FrameLayout>
</LinearLayout>
